--- a/frontend/component-product/main/inestagram/insta.css
+++ b/frontend/component-product/main/inestagram/insta.css
@@ -11,3 +11,20 @@
     text-align: center;
      margin-bottom: 2rem;
 }
+
+
+  /* Responsive */
+
+@media(max-width:800px){
+    .instagram-title{
+        font-size: 35px;
+    }
+    .instagram-des{
+        text-align: center;
+        font-size: 20px;
+        line-height: 35px;
+    }
+    .instagram-box-img img{
+        width: 200px;
+    }
+}
