refactor componenet comment to main

--- a/frontend/component-product/main/comment/comment.css
+++ b/frontend/component-product/main/comment/comment.css
@@ -3,8 +3,7 @@
 display: flex;
 align-items: center;
 justify-content: center;
-width:949px ;
-height:400px ;
+width:100vh;
 gap: 2rem;
 border: 1px solid #DBDBDB;
 box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
@@ -15,6 +14,7 @@ padding: 2rem;
     color: var(--color-484848);
     line-height: 25px;
     margin-bottom: 2rem;
+    max-width: 50%;
 }
 .box-star-title{
 
@@ -33,9 +33,9 @@ padding: 2rem;
     color: var(--color-8A8A8A);
     text-align: center;
 }
-.main-left-icon{
-    display: flex;
-    right: 0;
-    top: 50%;
-    position: absolute;
+
+@media(max-width:800px){
+    .comment-box{
+        margin: 0 1rem;
+    }
 }
