--- a/frontend/component-product/header/header.css
+++ b/frontend/component-product/header/header.css
@@ -51,7 +51,7 @@ display: flex;
     width:250px;
     height:100vh;
     z-index:999;
-    background-color:var(--color-767676);
+   background-color: rgba(255, 255, 255, 0.8);
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
