Component changes html product

--- a/frontend/component/product/product.html
+++ b/frontend/component/product/product.html
@@ -21,20 +21,15 @@
                  Scelerisque duis ultrices sollicitudin aliquam sem.
                   Scelerisque duis ultrices sollicitudin 
         </div>
-        
+        <!-- Test btn-category -->
         <div class="container-btn-product">
-                <button class="sign">Men’s Fashion</button>
-                <button class="sign">Women’s Fashion</button>
-                <button class="sign">Women Accessories</button>
-                <button class="sign">Men Accessories</button>
-                <button class="sign">Discount Deals</button>
 
         </div>
 
        <!-- TEST -->
    <div class="container product">
 
-        <div class="main-box-product">
+        <!-- <div class="main-box-product">
                 <div class="box-img">
                         <img src="/frontend/images/box-img1.png" alt="">
                 </div>
@@ -46,21 +41,28 @@
                             <img src="/frontend/images/icon-star.png" alt="">
                         </div>
                 </div>
-            <div class="box-product-brand">
+                <div class="box-product-brand">
                 <p>Al Karam</p>
-            </div>
-                        <div class="box-producr-comment">
+                </div>
+                <div class="box-producr-comment">
                                 <p>(4.1k) Customer Reviews</p>
-                        </div>
-                        <div class="box-product-price">
+                </div>
+                <div class="box-product-price">
                                 <div class="product-price">$95.50</div>
                                 <div class="box-Almost">
                                  <p><a href="#">Almost Sold Out</a></p>
                                 </div>
-                        </div>
-        </div>
+                </div>
+        </div> -->
                 
-        <div class="sign">View More</div>
+            <div class="main-left-icon">
+                <div class="main-back-icon-right">
+                    <img src="/frontend/images/icon-back.png" alt="" class="next">
+                </div>
+                <div class="main-left-icon-next">
+                    <img src="/frontend/images/icon-next.png" alt="" class="pre">
+                </div>
+          </div>
 
    </div>
 
@@ -68,6 +70,7 @@
    
 </main>
 
+<script src="./product.js"></script>
 
 </body>
 </html>
