--- a/frontend/component/product/product.html
+++ b/frontend/component/product/product.html
@@ -10,7 +10,7 @@
 <body>
     
 
-<main class="main-product">
+<main class="main-product" >
     
         <div class="main-product-title">
             <h1>New Arrivals</h1>
@@ -29,31 +29,7 @@
        <!-- TEST -->
    <div class="container product">
 
-        <!-- <div class="main-box-product">
-                <div class="box-img">
-                        <img src="/frontend/images/box-img1.png" alt="">
-                </div>
-                <div class="box-star">
-                    <div class="box-star-title">Full Sweater</div>
-                        <div class="box-collection-star">
-                            <img src="/frontend/images/icon-star.png" alt="">
-                            <img src="/frontend/images/icon-star.png" alt="">
-                            <img src="/frontend/images/icon-star.png" alt="">
-                        </div>
-                </div>
-                <div class="box-product-brand">
-                <p>Al Karam</p>
-                </div>
-                <div class="box-producr-comment">
-                                <p>(4.1k) Customer Reviews</p>
-                </div>
-                <div class="box-product-price">
-                                <div class="product-price">$95.50</div>
-                                <div class="box-Almost">
-                                 <p><a href="#">Almost Sold Out</a></p>
-                                </div>
-                </div>
-        </div> -->
+      
                 
             <div class="main-left-icon">
                 <div class="main-back-icon-right">
@@ -70,7 +46,7 @@
    
 </main>
 
-<script src="./product.js"></script>
+<script type="module"  src="./product.js"></script>
 
 </body>
 </html>
