Adding modal type to script tag in send-cod

--- a/frontend/component/Login/send-code.html
+++ b/frontend/component/Login/send-code.html
@@ -26,7 +26,7 @@
             </form>
         </div>
     </div>
- <script src="/frontend/component/Login/send-code.js"></script>
+ <script type="module"  src="/frontend/component/Login/send-code.js"></script>
 
 </body>
 </html>
