Adding modal type to script tag in sign_in

--- a/frontend/component/Login/sign-in.html
+++ b/frontend/component/Login/sign-in.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     
-<script src="/frontend/component/Login/sign-in.js"></script>
+<script type="module"  src="/frontend/component/Login/sign-in.js"></script>
   
 </body>
 </html>
