--- a/frontend/component/feedbacks/feedback.css
+++ b/frontend/component/feedbacks/feedback.css
@@ -48,12 +48,20 @@
     margin-bottom: 3rem;
     padding: 3rem 1rem;
 }
-.name-text{
-    font-size: 30px;
+.user-name{
+    font-size:25px;
     font-weight: bold;
     color: var(--color-484848);
+    margin-bottom: 1rem;
+}
+.span-rate{
+    font-size: 20px;
+    color: var(--color-484848);
+  
 }
 .text-comment{
     font-size: 25px;
     color: var(--color-767676);
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
