cheng html feedback

--- a/frontend/component/feedbacks/feedback.html
+++ b/frontend/component/feedbacks/feedback.html
@@ -40,8 +40,8 @@
 
      <!-- add comment to Dom -->
     <div class="container-feedback">
-        <div class="feedback-item">
-        <div class="name-text">fatemeh saeedi</div>
+        <!-- <div class="feedback-item">
+        <div class="user-name">fatemeh saeedi</div>
 
        <div class="star comment">
             <div class="box-collection-star">
@@ -50,28 +50,11 @@
         </div>
        
         <div class="text-comment">کالای خوبی بود ممنون از تیم پشتیبانی وب سایت</div>
-        </div>
+        </div> -->
    
     </div>
 
-     <div class="container-feedback">
-        <div class="feedback-item">
-            <div class="name-text">nazanin mohammadi</div>
-
-       <div class="starcomment">
-            <div class="box-collection-star">
-                <img src="/frontend/images/icon-star.png" alt="">
-            </div>
-        </div>
-       
-        <div class="text-comment">رنگ لباس دقیقا مطابق با عکس بودو جنس خوبی داشت ولی یک سایز بهم کوچیکه</div>
-        </div>
-     
-    </div>
-         
- 
-
-     <script src="/frontend/component/feedbacks/feedback.js"></script>
+     <script  type="module" src="/frontend/component/feedbacks/feedback.js"></script>
     
 
 </body>
