--- a/frontend/component/feedbacks/feedback.html
+++ b/frontend/component/feedbacks/feedback.html
@@ -28,7 +28,7 @@
 
         <div class="container-input">
         <label class="box-comment-nameuser">Write comment:</label>
-        <input type="text" placeholder="Write comment" class="input-comment">
+         <textarea rows="6" placeholder="Write comment" class="input-comment"></textarea>
         </div>
 
         <br>
