--- a/frontend/component/feedbacks/feedback.css
+++ b/frontend/component/feedbacks/feedback.css
@@ -38,6 +38,7 @@
     border: 1px solid #DBDBDB;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
     margin-bottom: 3rem;
+    height: 320px;
 }
 .container-feedback{
     margin-right: 2rem;
@@ -64,4 +65,7 @@
     color: var(--color-767676);
     margin-top: 1rem;
     margin-bottom: 1rem;
+}
+.input-comment,.number-star{
+    width: 100%;
 }
