--- a/frontend/component/panel-admin/panel-admin.css
+++ b/frontend/component/panel-admin/panel-admin.css
@@ -39,3 +39,19 @@
     justify-content: center;
 }
 
+/* css add product to panel */
+.addProductForm{
+    margin: auto;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    padding: 20px;
+    max-width: 500px;
+}
+input,textarea,select{
+    width: 100%;
+    margin-bottom: 1rem;
+    padding:10px 5px;
+}
