--- a/frontend/component/panel-admin/panel-admin.css
+++ b/frontend/component/panel-admin/panel-admin.css
@@ -27,16 +27,12 @@
     color: var(--color-484848);
 }
 .admin{
-   border-left: 1px solid var(--color-484848);
-    height: 100vh;
-
+     display: flex;
+    justify-content: flex-end;
 }
 .container-li{
     padding: 1.5rem;
-    display: flex;
    
-    align-items: center;
-    justify-content: center;
 }
 
 /* css add product to panel */
@@ -50,8 +46,34 @@
     padding: 20px;
     max-width: 500px;
 }
+.add-category{
+    display: flex;
+    margin: 0 auto;
+    width: 450px;
+    padding:10px;
+}
+.add-cat-panel{
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    padding: 20px;
+    max-width: 500px;
+    margin: auto;
+    display: none;
+    
+}
 input,textarea,select{
-    width: 100%;
     margin-bottom: 1rem;
     padding:10px 5px;
+}
+.add-category,.btn-re-cat{
+    background-color: var(--color-8A8A8A);
+    padding: 5px;
+    color: var( --color-f0f0f0);
+    border: none;
+}
+input ,textarea,select{
+    width: 100%;
 }
