add component basket

--- a/frontend/component/product/product.html
+++ b/frontend/component/product/product.html
@@ -27,7 +27,7 @@
         </div>
      
 
-       <!-- TEST -->
+       <!-- TEST  component product-->
    <div class="container product">
 
       
@@ -43,8 +43,10 @@
 
    </div>
 
-  
-   
+   <!-- Test basket product -->
+    
+ 
+
 </main>
 
 <script type="module"  src="./product.js"></script>
