--- a/frontend/component/product/product.css
+++ b/frontend/component/product/product.css
@@ -77,6 +77,47 @@ margin-bottom: 1rem;
    border: none;
 }
 
+/* style to baskett */
+
+.add-message{
+    border: 1px solid #DBDBDB;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+    padding: 2rem;
+    max-width: 450px;
+    margin: 0 auto;
+    display: none;
+}
+.basket-produc{
+    display: flex;
+    gap: 1rem;
+}
+.icon-close{
+    margin-bottom: 1rem;
+}
+.btngobasket{
+    padding:0.3rem 1rem;
+    background-color:var(--color-484848);
+    border: none;
+    margin-top: 1rem;
+    width: 100%;
+    font-weight: bold;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    color: var(--color-f0f0f0);
+}
+.descripton{
+    color: var(--color-484848);
+    margin: 1rem 0;
+}
+.container-ico{
+    display: flex;
+     margin: 3rem 0;
+     gap: 0.5rem;
+
+}
 /* Responsive */
 
 @media(max-width:800px){
