--- a/frontend/component/product/product.css
+++ b/frontend/component/product/product.css
@@ -81,11 +81,17 @@ margin-bottom: 1rem;
 
 .add-message{
     border: 1px solid #DBDBDB;
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
     padding: 2rem;
     max-width: 450px;
     margin: 0 auto;
+     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3); 
     display: none;
+
+    /* position: fixed;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    left: 50%; */
 }
 .basket-produc{
     display: flex;
@@ -118,6 +124,7 @@ margin-bottom: 1rem;
      gap: 0.5rem;
 
 }
+
 /* Responsive */
 
 @media(max-width:800px){
