--- a/frontend/component/product/product.html
+++ b/frontend/component/product/product.html
@@ -47,7 +47,7 @@
     </main>
         
 
-<script type="module"  src="./product.js"></script>
+<script type="module"  src="/frontend/component/product/product.js"></script>
 
 </body>
 </html>
