creat html basket

--- a/frontend/component/basket/basket.html
+++ b/frontend/component/basket/basket.html
@@ -10,9 +10,8 @@
 
 <body>
 
-<div class="cont-basket">
-    
-</div>  
+<div id="basket-container"></div>
+ 
     
     <script type="module" src="/frontend/component/basket/basket.js"></script>
 </body>
